--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "t3live-chat",
+  "name": "t3-chat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev:ws": "ts-node-dev --project tsconfig.server.json --respawn --transpile-only src/server/wsServer.ts",
+    "dev:next": "next dev",
+    "dev": "run-p dev:*",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.1.1",
-    "@trpc/client": "^9.26.2",
-    "@trpc/next": "^9.26.2",
-    "@trpc/react": "^9.26.2",
-    "@trpc/server": "^9.26.2",
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^4.0.0",
+    "@trpc/client": "^9.26.0",
+    "@trpc/next": "^9.26.0",
+    "@trpc/react": "^9.26.0",
+    "@trpc/server": "^9.26.0",
     "nanoid": "^4.0.0",
-    "next": "12.2.3",
-    "next-auth": "^4.10.3",
+    "next": "12.2.1",
+    "next-auth": "^4.10.0",
     "node-fetch": "2.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "3.39.2",
+    "react-query": "^3.39.2",
     "superjson": "^1.9.1",
-    "ws": "^8.8.1",
+    "ws": "^8.8.0",
     "zod": "^3.17.3"
   },
   "devDependencies": {
@@ -34,13 +36,14 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/ws": "^8.5.3",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.7",
+    "dotenv": "^16.0.1",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.2.3",
+    "eslint-config-next": "12.2.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
-    "prisma": "^4.1.1",
-    "tailwindcss": "^3.1.7",
+    "prisma": "^4.0.0",
+    "tailwindcss": "^3.1.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.7.4"
   }
