--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.server.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "dist",
